# trainsim

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  tests.rs  trainsim.rs  utils.rs  worker.rs
src/train/: mod.rs  train_structs.rs
ui/: components.slint  main.slint  train_systems.slint
