[package]
name = "trainsim"
version = "0.1.0"
edition = "2021"

#Building build.rs to have external .slint files for the ui
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
tokio = { version = "1.15", features = ["full", "tracing"] }
slint = "0.2.0"


#External slint ui files dependency
[build-dependencies]
slint-build = "0.2.0"